<resources>
    <string name="app_name">Lucky Freitag</string>
    <string name="lucky_freitag">Lucky Freitag</string>
    <string name="try_your_luck">Try your luck!</string>
    <string name="coinButton">Coin</string>
    <string name="randnumberButton">RandNumber</string>
    <string name="infoButton">Info</string>
    <string name="quitButton">Quit</string>
    <string name="loremIpsum">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur? At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati cupiditate non provident, similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio, cumque nihil impedit, quo minus id, quod maxime placeat, facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet, ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</string>
    <string name="textview">TextView</string>
    <string name="enter_lucky_number">Enter lucky number!</string>
    <string name="random_number">Random number</string>
    <string name="backButtonString">Back</string>
    <string name="did_you_win">Did you win?</string>
    <string name="scrollview">ScrollView</string>
    <string name="lorem_costam">Lorem cosTam</string>
    <string name="vladislav_lapko_2019">Vladislav Lapko, 2019</string>
    <string name="lucky_number">Lucky number</string>
    <string name="go">Go</string>
    <string name="test_togglebutton">Test toggleButton</string>
    <string name="test_checkbox">Test checkBox</string>
    <string name="test_it">Test it!</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="test_switch">Test switch</string>
    <string name="test_seekbar">Test seekBar</string>
    <string name="calltodev">CallToDev</string>
    <string name="wins_and_losses">Wins and Losses</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="randomizertext">Random Number</string>
    <string name="random_game">Random Game</string>
    <string name="number_is">Your number is...</string>
    <string name="randomised_number"> </string>
    <string name="i_feel_lucky">I feel lucky!</string>


</resources>
