<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayoutWelcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/lucky_freitag"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lemonada_semibold"
            android:text="@string/try_your_luck"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/randNumberButton"
            android:layout_width="160dp"
            android:layout_height="52dp"
            android:layout_marginTop="40dp"
            android:onClick="openNumber"
            android:text="@string/randnumberButton"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/coinButton"
            android:layout_width="160dp"
            android:layout_height="52dp"
            android:layout_marginTop="40dp"
            android:onClick="openCoin"
            android:text="@string/coinButton"
            android:textSize="24sp" />

        <Button
            android:id="@+id/quitButton"
            android:layout_width="160dp"
            android:layout_height="52dp"
            android:layout_marginTop="200dp"
            android:onClick="closeApp"
            android:text="@string/quitButton"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>