<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutFragmentRandomizer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".fragments.Randomizer">

    <TextView
        android:id="@+id/textViewTitleFragmentRandomizer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/randomizertext"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:text="Random Number" />

    <TextView
        android:id="@+id/textViewNumberIsFragmentRandomizer"
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/number_is"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="30sp"
        tools:text="Your number is..." />

    <TextView
        android:id="@+id/textViewRandomNumberFragmentRandomizer"
        android:layout_width="411dp"
        android:layout_height="97dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/randomised_number"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="60sp"
        tools:text="  " />

    <Button
        android:id="@+id/buttonPlayFragmentRandomizer"
        android:layout_width="327dp"
        android:layout_height="113dp"
        android:text="@string/i_feel_lucky"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
</LinearLayout>