<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.GameFragment">

    <TextView
        android:id="@+id/textViewFragmentGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/random_game"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userNumberFragmentGame"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:ems="10"
        android:hint="@string/enter_lucky_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="30sp"
        tools:targetApi="o" />

    <Button
        android:id="@+id/playButtonFragmentGame"
        android:layout_width="334dp"
        android:layout_height="69dp"
        android:gravity="center"
        android:text="@string/go"
        android:textSize="24sp" />

    <ListView
        android:id="@+id/simpleListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" />

</LinearLayout>